@@ -2,8 +2,8 @@
 
 #include <skalibs/djbunix.h>
 
-ssize_t openreadnclose (char const *file, char *s, size_t n)
+ssize_t openreadnclose_nb (char const *file, char *s, size_t n)
 {
-  int fd = openbc_read(file) ;
+  int fd = openc_read(file) ;
   return fd == -1 ? fd : readnclose(fd, s, n) ;
 }
